# Label-Propagation

./: CMakeLists.txt  LICENSE  Makefile  Project_Completion_Report.md  README.md  build.sh
docs/: baseline.md
include/: cuda_kernels.hpp  mpi_distributed_label_propagation.hpp  multi_gpu_manager.hpp
src/: cuda_kernels.cu  main.cpp  mpi_distributed_label_propagation.cu
